@@ -1,3 +1,7 @@
+2023-08-16  Matteo Corti  <matteo@corti.li>
+
+        * check_ssl_cert (check_ocsp): Fixed the proxy settings by OCSP
+
 2023-08-10  Matteo Corti  <matteo@corti.li>
 
         * check_ssl_cert (main): Fixed a bug in the proxy command line options validation
